@@ -1,6 +1,19 @@
 package pl.databucket.server.security;
 
-import io.jsonwebtoken.*;
+import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.Jwt;
+import io.jsonwebtoken.JwtException;
+import io.jsonwebtoken.Jwts;
+import io.jsonwebtoken.SignatureAlgorithm;
+import java.io.Serializable;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Date;
+import java.util.List;
+import java.util.Optional;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
@@ -8,13 +21,6 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Component;
-
-import java.io.Serializable;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Date;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @Component
 public class TokenProvider implements Serializable {
@@ -44,9 +50,9 @@ public class TokenProvider implements Serializable {
 
     private Claims getAllClaimsFromToken(String token) {
         return Jwts.parser()
-                .setSigningKey(singingKey)
-                .parseClaimsJws(token)
-                .getBody();
+            .setSigningKey(singingKey)
+            .parseClaimsJws(token)
+            .getBody();
     }
 
     public Boolean isTokenExpired(String token) {
@@ -56,52 +62,98 @@ public class TokenProvider implements Serializable {
 
     public String generateToken(Authentication authentication, Integer projectId) {
         final String authorities = authentication.getAuthorities().stream()
-                .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.joining(","));
+            .map(GrantedAuthority::getAuthority)
+            .collect(Collectors.joining(","));
         return Jwts.builder()
-                .setSubject(authentication.getName())
-                .claim(AUTHORITIES_KEY, authorities)
-                .claim(PROJECT_ID, projectId)
-                .signWith(SignatureAlgorithm.HS256, singingKey)
-                .setIssuedAt(new Date(System.currentTimeMillis()))
-                .setExpiration(new Date(System.currentTimeMillis() + expireHours * 60 * 60 * 1000))
-                .compact();
+            .setSubject(authentication.getName())
+            .claim(AUTHORITIES_KEY, authorities)
+            .claim(PROJECT_ID, projectId)
+            .signWith(SignatureAlgorithm.HS256, singingKey)
+            .setIssuedAt(new Date(System.currentTimeMillis()))
+            .setExpiration(new Date(System.currentTimeMillis() + expireHours * 60 * 60 * 1000))
+            .compact();
     }
 
-    public Boolean validateToken(String token, UserDetails userDetails) {
+    public boolean validateToken(String token, UserDetails userDetails) {
         final String username = getUsernameFromToken(token);
         return (username.equals(userDetails.getUsername()) && !isTokenExpired(token));
     }
 
     public String packToJwts(String content) {
         return Jwts.builder()
-                .claim(CONTENT, content)
-                .signWith(SignatureAlgorithm.HS256, singingKey)
-                .setIssuedAt(new Date(System.currentTimeMillis()))
-                .setExpiration(new Date(System.currentTimeMillis() + 48 * 60 * 60 * 1000))
-                .compact();
+            .claim(CONTENT, content)
+            .signWith(SignatureAlgorithm.HS256, singingKey)
+            .setIssuedAt(new Date(System.currentTimeMillis()))
+            .setExpiration(new Date(System.currentTimeMillis() + 48 * 60 * 60 * 1000))
+            .compact();
     }
 
     public String unpackFromJwts(String jwts) {
         return Jwts.parser()
-                .setSigningKey(singingKey)
-                .parseClaimsJws(jwts)
-                .getBody().get(CONTENT).toString();
+            .setSigningKey(singingKey)
+            .parseClaimsJws(jwts)
+            .getBody().get(CONTENT).toString();
     }
 
-    UsernamePasswordAuthenticationToken getAuthentication(final String token, final CustomUserDetails customUserDetails) {
+    public Jwt parseJwt(String token) {
+        return Jwts.parser().setSigningKey(singingKey).parse(token);
+    }
 
-        final JwtParser jwtParser = Jwts.parser().setSigningKey(singingKey);
-        final Jws<Claims> claimsJws = jwtParser.parseClaimsJws(token);
-        final Claims claims = claimsJws.getBody();
+    public CustomUserDetails parseToken(String token) {
+        try {
+            Claims claims = getAllClaimsFromToken(token);
 
-        customUserDetails.setProjectId((Integer) claims.get(PROJECT_ID));
-
-        final Collection<? extends GrantedAuthority> authorities =
+            final Collection<? extends GrantedAuthority> authorities =
                 Arrays.stream(claims.get(AUTHORITIES_KEY).toString().split(","))
-                        .map(SimpleGrantedAuthority::new)
-                        .collect(Collectors.toList());
+                    .map(SimpleGrantedAuthority::new)
+                    .toList();
 
-        return new UsernamePasswordAuthenticationToken(customUserDetails, "", authorities);
+            return CustomUserDetails.builder()
+                .username(claims.getSubject())
+                .authorities(authorities)
+                .build();
+
+        } catch (JwtException | ClassCastException e) {
+            return null;
+        }
     }
+
+    public UsernamePasswordAuthenticationToken getAuthentication(final String token) {
+        final Claims claims = Jwts.parser()
+            .setSigningKey(singingKey)
+            .parseClaimsJws(token)
+            .getBody();
+
+        List<String> roles = List.of(claims.get(AUTHORITIES_KEY).toString().split(","));
+        final Collection<SimpleGrantedAuthority> authorities =
+            Stream.of(roles, List.of(claims.get(PROJECT_ID).toString()))
+                .flatMap(Collection::stream)
+                .map(SimpleGrantedAuthority::new)
+                .toList();
+
+        CustomUserDetails principal = CustomUserDetails.builder()
+            .username(claims.getSubject())
+            .authorities(authorities)
+            .projectId(claims.get(PROJECT_ID, Integer.class))
+            .build();
+        return new UsernamePasswordAuthenticationToken(principal, null, authorities);
+    }
+//    UsernamePasswordAuthenticationToken getAuthentication(final String token,
+//        final CustomUserDetails customUserDetails) {
+//
+//        final Claims claims = Jwts.parser()
+//            .setSigningKey(singingKey)
+//            .parseClaimsJws(token)
+//            .getBody();
+//
+//        customUserDetails.setProjectId((Integer) claims.get(PROJECT_ID));
+//
+//        final Collection<? extends GrantedAuthority> authorities =
+//            Arrays.stream(claims.get(AUTHORITIES_KEY).toString().split(","))
+//                .map(SimpleGrantedAuthority::new)
+//                .toList();
+//
+//        return new UsernamePasswordAuthenticationToken(customUserDetails, "", authorities);
+//    }
+
 }
